--- a/project.css
+++ b/project.css
@@ -12,7 +12,10 @@ main {
   justify-content: center;
 }
 article {
-  line-height: 5rem;
+  /* line-height: 5rem; */
+  width: 600px;
+  column-width: 200px;
+  column-gap: 50px;
 }
 h1 {
   color: wheat;
