--- a/project.css
+++ b/project.css
@@ -20,8 +20,9 @@ section {
 }
 h1 {
   color: wheat;
-  font-size: 4rem;
+  font-size: 2.5rem;
   margin-bottom: 5px;
+  margin-top: 10px;
 }
 p {
   color: rgb(229, 226, 226);
@@ -31,9 +32,14 @@ p {
 a {
   color: turquoise;
 }
+.image_frame {
+  width: 800px;
+  height: 400px;
+}
 img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
 }
 
 @media only screen and (max-width: 768px) {
