--- a/project.css
+++ b/project.css
@@ -12,12 +12,12 @@ main {
   justify-content: center;
 }
 
-section {
-  /* line-height: 5rem; */
-  width: 800px;
+/* section { */
+/* line-height: 5rem; */
+/* width: 800px;
   margin: 0 auto;
   line-height: 3rem;
-}
+} */
 h1 {
   color: wheat;
   font-size: 2.5rem;
@@ -32,24 +32,32 @@ p {
 a {
   color: turquoise;
 }
-.image_frame {
+/* .image_frame {
   width: 800px;
   height: 400px;
-}
+  border: 3px solid rgb(168, 5, 5);
+  border-radius: 3px;
+} */
 img {
   width: 100%;
-  height: 100%;
+  height: 600px;
   object-fit: cover;
+  border: 3px solid rgb(240, 136, 1);
+  border-radius: 3px;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   main {
-    max-width: 350px;
+    width: 360px;
+    padding: 10px;
   }
-  h1 {
-    font-size: 2.5rem;
-  }
-  section {
-    max-width: 350px;
-  }
+  /* section {
+    width: 360px;
+    padding: 20px;
+    overflow: hidden;
+  } */
+  /* .image_frame {
+    width: 400px;
+    object-fit: cover;
+  } */
 }
